syntax = "proto3";

package protodb.server;

message ListDatabases {
}

message ListDatabasesResponse {
  repeated string database = 1;
}
